[package]
name = "websocket"
version = "0.21.1"
authors = ["cyderize <admin@cyderize.org>", "Michael Eden <themichaeleden@gmail.com>"]

description = "A WebSocket (RFC6455) library for Rust."

documentation = "http://cyderize.github.io/rust-websocket/doc/websocket/"
homepage = "http://cyderize.github.io/rust-websocket/"
repository = "https://github.com/cyderize/rust-websocket.git"

readme = "README.md"

keywords = ["websocket", "websockets", "rfc6455", "async", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::websocket"]

license = "MIT"

[dependencies]
hyper = { version = "^0.10.6", optional = true }
unicase = "1.0"
log = "0.4.1"
url = "1.0"
bitflags = "0.9"
rand = "0.4"
byteorder = "1.0"
sha1 = "0.2"
base64 = "0.9"
futures = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-io = { version = "^0.1.2", optional = true }
tokio-tls = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }
native-tls = { version = "^0.1.2", optional = true }

[dev-dependencies]
futures-cpupool = "0.1"

[features]
default = ["handshake", "sync", "sync-ssl", "async", "async-ssl"]
handshake = ["hyper"]
sync = ["handshake"]
sync-ssl = ["handshake", "native-tls", "sync"]
async = ["tokio-core", "tokio-io", "bytes", "futures"]
async-ssl = ["native-tls", "tokio-tls", "async"]
nightly = ["handshake", "hyper/nightly"]
